# sms-client

./: Cargo.toml  README.md
.github/workflows/: cargo-release.yml
examples/pushover/: Cargo.toml  README.md
examples/pushover/src/: main.rs
src/: config.rs  error.rs  lib.rs  types.rs
src/http/: error.rs  mod.rs  paginator.rs  types.rs
src/ws/: client.rs  connection.rs  error.rs  mod.rs  tls.rs  types.rs  worker.rs
