[package]
name = "sms-client"
description = "A HTTP and WebSocket interface for SMS-API, allowing for SMS messages to be sent and recieved via a local GSM modem!"
version = "1.3.2"
edition = "2024"
license = "AGPL-3"
keywords = ["sms", "gsm", "http-client", "websocket-client"]
categories = ["hardware-support", "api-bindings"]
homepage = "https://github.com/morgverd/sms-client"
repository = "https://github.com/morgverd/sms-client"
readme = "README.md"
authors = ["morgverd <morgverd@gmail.com>"]

[features]
default = []
websocket = ["dep:futures-util", "dep:tokio-tungstenite", "dep:tungstenite", "dep:http"]

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
url = "2.5.7"

# These are optionally used to support websockets.
futures-util = { version = "0.3.31", optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
tungstenite = { version = "0.27.0", optional = true }
http = { version = "1.3.1", optional = true }
