[package]
name = "pushover-sms"
version = "2.0.0"
edition = "2024"

[dependencies]
sms-client = { path = "../../../sms-client", default-features = false, features = ["websocket-tls-rustls"] }
pushover-rs = { version = "0.3.22", default-features = false, features = ["rustls-tls"] }
env_logger = "0.11.8"
log = "0.4.28"
tokio = "1.47.1"
